# asio-libusb

./: .gitignore  README.md  meson.build  meson_options.txt  windows-mingw-static.config
examples/: async_communication.cpp  meson.build
include/libusb/: error.hpp  usb_device.hpp  usb_device_acceptor.hpp  usb_device_base.hpp
include/libusb/detail/: async_accept_op.hpp  async_transfer_op.hpp  usb_device_ops.hpp  usb_device_service.hpp
include/libusb/detail/impl/: usb_device_service.ipp
subprojects/: boost_ut.wrap
test/: acceptor.cpp  meson.build  usb_device.cpp
